@@ -137,6 +137,10 @@ public:
 
   Range range_value (void) const { return range; }
 
+  octave_value not (void) const;
+
+  octave_value uminus (void) const { return octave_value (- range); }
+
   octave_value transpose (void) const;
 
   octave_value hermitian (void) const;
